# kiopp-minesweeper

./: .gitignore  CMakeLists.txt  LinuxCompile.sh  README.md
assets/: png_to_c.sh
assets/inc/: tilesheet.h
assets/src/: tilesheet.c
inc/: Button.h  Grid.h  TextBox.h  Tile.h  kiopplib.h
src/: Button.c  Grid.c  TextBox.c  Tile.c  main.c
